fix: [CDS-86962]: Add scrollbar to error section in sample log messages section (#19582)

--- a/src/modules/85-cv/pages/health-source/connectors/CommonHealthSource/components/CustomMetricForm/components/LogsTable/LogsTable.module.scss
+++ b/src/modules/85-cv/pages/health-source/connectors/CommonHealthSource/components/CustomMetricForm/components/LogsTable/LogsTable.module.scss
@@ -25,6 +25,7 @@
   position: relative;
   border: 1px solid var(--grey-200);
   border-radius: var(--spacing-small);
+  overflow-y: scroll;
   > div {
     height: unset !important;
     position: absolute;
